fix overflow problems with shadows

--- a/htdocs/style/main.css
+++ b/htdocs/style/main.css
@@ -102,7 +102,7 @@ main {
   flex-grow: 1;
   flex-shrink: 0;
   flex-basis: 0;
-  overflow: hidden;
+  overflow: clip;
   transition: flex-basis var( --transition-timing ) var( --transition-timing-function );
 }
 
@@ -126,6 +126,7 @@ main {
 
 label {
   cursor: pointer;
+  position: relative;
 }
 
 form {
